UITableViewDataSource, UITableViewDelegate を追加

--- a/ViperApp/App/App.storyboard
+++ b/ViperApp/App/App.storyboard
@@ -18,37 +18,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhj-iD-Kxf">
-                                <rect key="frame" x="161" y="318" width="53.5" height="31.5"/>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3go-FS-e8o">
+                                <rect key="frame" x="16" y="163" width="343" height="484"/>
+                                <connections>
+                                    <segue destination="VUY-a3-Z0H" kind="embed" identifier="AppContainerViewControllerSegue" id="2uJ-Xv-10t"/>
+                                </connections>
+                            </containerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhj-iD-Kxf">
+                                <rect key="frame" x="16" y="80" width="343" height="31"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="518-bR-u6P">
-                                <rect key="frame" x="158.5" y="357.5" width="58" height="36"/>
+                                <rect key="frame" x="158" y="119" width="59" height="36"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="handleButtonAction:" destination="WNb-2e-1Lq" eventType="touchUpInside" id="H8G-vS-rTa"/>
                                 </connections>
                             </button>
-                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3go-FS-e8o">
-                                <rect key="frame" x="67" y="99" width="240" height="128"/>
-                                <connections>
-                                    <segue destination="VUY-a3-Z0H" kind="embed" identifier="AppContainerViewControllerSegue" id="2uJ-Xv-10t"/>
-                                </connections>
-                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Qxy-qu-PCn" firstAttribute="trailing" secondItem="3go-FS-e8o" secondAttribute="trailing" constant="68" id="7Ox-2K-BM5"/>
+                            <constraint firstItem="3go-FS-e8o" firstAttribute="leading" secondItem="Qxy-qu-PCn" secondAttribute="leading" constant="16" id="3m8-0U-b0y"/>
+                            <constraint firstItem="Qxy-qu-PCn" firstAttribute="trailing" secondItem="3go-FS-e8o" secondAttribute="trailing" constant="16" id="4Dn-ty-eST"/>
                             <constraint firstItem="518-bR-u6P" firstAttribute="centerX" secondItem="qg4-ei-KbS" secondAttribute="centerX" id="F18-GA-Heh"/>
-                            <constraint firstItem="xhj-iD-Kxf" firstAttribute="centerY" secondItem="qg4-ei-KbS" secondAttribute="centerY" id="GGZ-dj-qZC"/>
-                            <constraint firstItem="3go-FS-e8o" firstAttribute="top" secondItem="Qxy-qu-PCn" secondAttribute="top" constant="79" id="PVC-wN-QKX"/>
-                            <constraint firstItem="3go-FS-e8o" firstAttribute="leading" secondItem="Qxy-qu-PCn" secondAttribute="leading" constant="67" id="aZ4-Fv-SH6"/>
-                            <constraint firstItem="xhj-iD-Kxf" firstAttribute="top" secondItem="3go-FS-e8o" secondAttribute="bottom" constant="91" id="bb5-mn-Auc"/>
-                            <constraint firstItem="518-bR-u6P" firstAttribute="top" secondItem="xhj-iD-Kxf" secondAttribute="bottom" constant="8" id="ef0-jB-L3U"/>
-                            <constraint firstItem="xhj-iD-Kxf" firstAttribute="centerX" secondItem="qg4-ei-KbS" secondAttribute="centerX" id="vD3-M1-Tid"/>
+                            <constraint firstItem="518-bR-u6P" firstAttribute="top" secondItem="xhj-iD-Kxf" secondAttribute="bottom" constant="8" symbolic="YES" id="G3p-dH-eAX"/>
+                            <constraint firstItem="xhj-iD-Kxf" firstAttribute="leading" secondItem="3go-FS-e8o" secondAttribute="leading" id="GtL-ta-Lht"/>
+                            <constraint firstItem="3go-FS-e8o" firstAttribute="top" secondItem="518-bR-u6P" secondAttribute="bottom" constant="8" id="H3W-XZ-lFB"/>
+                            <constraint firstItem="518-bR-u6P" firstAttribute="leading" secondItem="Qxy-qu-PCn" secondAttribute="leading" constant="158" id="PyO-c9-dsd"/>
+                            <constraint firstItem="Qxy-qu-PCn" firstAttribute="bottom" secondItem="3go-FS-e8o" secondAttribute="bottom" constant="20" id="Uxd-d2-tw6"/>
+                            <constraint firstItem="518-bR-u6P" firstAttribute="centerX" secondItem="3go-FS-e8o" secondAttribute="centerX" id="WIV-jQ-wnf"/>
+                            <constraint firstItem="xhj-iD-Kxf" firstAttribute="trailing" secondItem="3go-FS-e8o" secondAttribute="trailing" id="WV0-wJ-sbN"/>
+                            <constraint firstItem="518-bR-u6P" firstAttribute="top" secondItem="Qxy-qu-PCn" secondAttribute="top" constant="99" id="kFc-xy-di0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Qxy-qu-PCn"/>
                     </view>
@@ -59,33 +62,65 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pkw-Xn-Y8l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="258" y="147"/>
+            <point key="canvasLocation" x="-252" y="151.57421289355324"/>
         </scene>
         <!--App Container View Controller-->
         <scene sceneID="tTr-P8-EcE">
             <objects>
                 <viewController id="VUY-a3-Z0H" customClass="AppContainerViewController" customModule="ViperApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gYq-w4-Ael">
-                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                        <rect key="frame" x="0.0" y="0.0" width="343" height="484"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Container" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YnR-Wq-gzC">
-                                <rect key="frame" x="65.5" y="48.5" width="109.5" height="31.5"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="QEA-qZ-4N7">
+                                <rect key="frame" x="0.0" y="0.0" width="343" height="484"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AwesomeTableCell" rowHeight="88" id="eL8-EZ-Nmu" customClass="AppContainerViewCell" customModule="ViperApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="343" height="88"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eL8-EZ-Nmu" id="l5d-NT-45U">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="87.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g43-Rl-dmm">
+                                                    <rect key="frame" x="15" y="11" width="313" height="66"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="g43-Rl-dmm" firstAttribute="bottom" secondItem="l5d-NT-45U" secondAttribute="bottomMargin" id="FdH-Ku-0q8"/>
+                                                <constraint firstItem="g43-Rl-dmm" firstAttribute="top" secondItem="l5d-NT-45U" secondAttribute="topMargin" id="Ffp-wc-JLa"/>
+                                                <constraint firstItem="g43-Rl-dmm" firstAttribute="leading" secondItem="l5d-NT-45U" secondAttribute="leadingMargin" id="dne-fO-gv5"/>
+                                                <constraint firstItem="g43-Rl-dmm" firstAttribute="trailing" secondItem="l5d-NT-45U" secondAttribute="trailingMargin" id="lwP-dA-iSR"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="aLabel" destination="g43-Rl-dmm" id="hag-8j-wwp"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="YnR-Wq-gzC" firstAttribute="centerX" secondItem="gYq-w4-Ael" secondAttribute="centerX" id="AaR-jb-HS6"/>
-                            <constraint firstItem="YnR-Wq-gzC" firstAttribute="centerY" secondItem="gYq-w4-Ael" secondAttribute="centerY" id="g2x-JU-sbU"/>
+                            <constraint firstItem="QEA-qZ-4N7" firstAttribute="top" secondItem="gYq-w4-Ael" secondAttribute="top" id="9zo-sH-XBg"/>
+                            <constraint firstItem="QEA-qZ-4N7" firstAttribute="bottom" secondItem="sbB-lg-DXP" secondAttribute="bottom" id="GUh-2W-RH4"/>
+                            <constraint firstItem="QEA-qZ-4N7" firstAttribute="leading" secondItem="sbB-lg-DXP" secondAttribute="leading" id="N81-te-srS"/>
+                            <constraint firstItem="QEA-qZ-4N7" firstAttribute="trailing" secondItem="sbB-lg-DXP" secondAttribute="trailing" id="fXA-V9-qOt"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="sbB-lg-DXP"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="QEA-qZ-4N7" id="x5l-KC-uwe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KaK-7y-L2X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="902" y="146"/>
+            <point key="canvasLocation" x="645.60000000000002" y="149.32533733133434"/>
         </scene>
     </scenes>
 </document>
